<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/add_device"
    android:visibility="gone"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="@string/shoes_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_your_shoes"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:theme="@style/MyEditText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed"
        android:text="@string/shoes_imei"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_shoes_imei"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:theme="@style/MyEditText"
        android:inputType="number"
        />
    <Button
        android:id="@+id/add_device_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_vode_bg"
        android:text="@string/add_shoes"
        android:textColor="#fff"
        android:textSize="14sp" />
</LinearLayout>