<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorOrange"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_civ"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x150"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x100"
            android:src="@mipmap/btn_img_photo_default"
            app:civ_border_color="#000000"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_icon"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginBottom="@dimen/x15"
            android:text="红布林"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            />
    </RelativeLayout>

        <TextView
            android:id="@+id/profile_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="@string/xgn_shop"
            android:textSize="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x8"
            android:background="@color/view_line"/>

        <TextView
            android:id="@+id/profile_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="@string/sport_target"
            android:textSize="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x8"
            android:background="@color/view_line"/>

    <TextView
        android:id="@+id/profile_affection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:drawableRight="@mipmap/ic_black"
        android:gravity="center_vertical"
        android:padding="@dimen/x15"
        android:text="@string/family_affection"
        android:textSize="16dp" />
        <View
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginRight="@dimen/x20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="低电量通知"
            android:textSize="16dp" />
        <View
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginRight="@dimen/x20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/profile_lose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="@string/prevent_loss"
            android:textSize="16dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x8"
        android:background="@color/view_line"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="@string/my_shop"
            android:textSize="16sp"/>

        <View
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginRight="@dimen/x20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/about_xgn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:drawableRight="@mipmap/ic_black"
            android:gravity="center_vertical"
            android:padding="@dimen/x20"
            android:text="@string/about_xgn"
            android:textSize="16sp"/>

        <View
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginRight="@dimen/x20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/profile_upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:drawableRight="@mipmap/ic_black"
        android:gravity="center_vertical"
        android:padding="@dimen/x20"
        android:text="@string/upgrade"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x6"
        android:background="@color/view_line"/>
    </LinearLayout>
</ScrollView>