<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorRed"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_civ"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@mipmap/btn_img_photo_default"
            app:civ_border_color="#000000"
            app:civ_border_width="0dp" />
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/civ_icon"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="红布林"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/setting"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/view_line"/>

    <include layout="@layout/profile_add"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/view_line"/>
    <TextView
        android:id="@+id/profile_affection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:drawableRight="@mipmap/ic_black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/family_affection"
        android:textSize="18dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/view_line"/>
    <TextView
        android:id="@+id/profile_upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:drawableRight="@mipmap/ic_black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/upgrade"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/view_line"></View>
    <TextView
        android:id="@+id/profile_lose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:drawableRight="@mipmap/ic_black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/prevent_loss"
        android:textSize="18sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/view_line"/>
</LinearLayout>