<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent"
        >
        <com.haoxi.shoes.widget.CompletedView
            android:id="@+id/tasks_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:circleColor="@color/white"
            app:radius="70dip"
            app:ringBgColor="@color/colorOrange2"
            app:ringColor="@color/colorRed"
            app:strokeWidth="20dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:padding="6dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/target_step"
                android:layout_marginRight="10dp"
                android:gravity="right"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                />

            <ImageView
                android:id="@+id/add_goal"
                android:layout_width="015dp"
                android:layout_height="15dp"
                android:src="@mipmap/add"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5100"
                android:layout_marginRight="30dp"
                android:textSize="30sp"
                android:textColor="@color/colorRed"
                android:layout_toLeftOf="@+id/step"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity_of_heat"
                android:layout_marginRight="10dp"
                android:gravity="right"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="780"
                android:textColor="@color/colorOrange"
                android:layout_toLeftOf="@+id/daka"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:id="@+id/daka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="大卡"
                android:layout_alignParentRight="true"
                />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_marginRight="10dp"
                android:gravity="right"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2300"
                    android:textColor="@color/colorOrange"
                    android:layout_toLeftOf="@+id/mi"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:id="@+id/mi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="米"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:layout_marginRight="10dp"
                android:gravity="right"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60%"
                    android:textColor="@color/colorOrange"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>